Fix: Sending raw and derived data to database via Kafka and Hazelcast cache.